<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:background="@drawable/popup_bg">


        <!--방 만들기-->
        <TextView
            android:id="@+id/popup_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/popup_title"
            android:text = "@string/make_room"
            android:fontFamily="@font/jua"
            android:gravity="center"
            android:textSize="35sp"
            android:textColor="#FFFFFF"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"/>

        <RelativeLayout
            android:layout_marginTop="90dp"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:background="@drawable/content"
            android:layout_centerHorizontal="true">

            <!--방 제목-->
            <TextView
                android:id="@+id/txt_room_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/room_title"
                android:textSize="20sp"
                android:textColor="#000000"
                android:fontFamily="@font/jua"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp" />

            <!--방 제목 입력-->
            <EditText
                android:id="@+id/edttxt_room_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:hint="@string/edit_room_title"
                android:layout_toRightOf="@+id/txt_room_title"
                android:fontFamily="@font/jua" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_marginTop="150dp"
            android:layout_width="340dp"
            android:layout_height="40dp"
            android:background="@drawable/content"
            android:layout_centerHorizontal="true">

            <!--비밀번호-->
            <TextView
                android:id="@+id/txt_room_pwd"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/room_pwd"
                android:textSize="20sp"
                android:textColor="#000000"
                android:fontFamily="@font/jua"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp" />

            <!--비밀번호 입력-->
            <EditText
                android:id="@+id/edit_room_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:hint="password"
                android:layout_toRightOf="@+id/txt_room_pwd"
                android:inputType="number"
                android:password="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="210dp"
            android:layout_width="340dp"
            android:layout_height="215dp"
            android:background="@drawable/content"
            android:layout_centerHorizontal="true">

            <!--게임종류-->
            <TextView
                android:id="@+id/txt_game_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_type"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:textColor="#000000"
                android:fontFamily="@font/jua"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp">


                <ImageView
                    android:id="@+id/imgbtn_icegame"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/generate_icegame"
                    android:layout_marginRight="10dp"/>

                <ImageView
                    android:id="@+id/imgbtn_davinci"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/imgbtn_icegame"
                    android:src="@drawable/generate_davinci"/>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgbtn_password_enter"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/generate_generate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="425dp">
    </ImageView>

</RelativeLayout>